Przyciski grup, kolory tła

--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,11 @@ width: 120px;
 margin-bottom: 4px;
 }
 
+nav li:nth-child(4n+1):hover { background-color: #d83900; color: #fff; }
+nav li:nth-child(4n+2):hover { background-color: #4f2500; color: #fff; }
+nav li:nth-child(4n+3):hover { background-color: #2844c8; color: #f8de00; }
+nav li:nth-child(4n+4):hover { background-color: #46c900; color: #4f2500; }
+
 nav ul {
 margin: 0;
 padding: 0;
